# india-elections

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
electoral_rolls/: captcha_solve.py  get.py  parse.py  pytorch_model.py
form20s/: extract_name.py  form20_dler.py  pdf_to_csv.py  process_csv.py  winner_summary.ipynb
tabula/: tabula-Form 20 Lakshadweep.csv
utils/: captcha_model.pth  captcha_solve.py  claude.py  pickle_cache.py  pytorch_model.py
